--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,42 +12,55 @@
     //utilisation du gps afin de déterminer l'adresse de la réparation
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    //acces à la mémoire de l'appareil pour la lecture et l'écriture de la vcard en externe / pas besoin en interne??
+    //acces à la mémoire de l'appareil pour la lecture et l'écriture de la vcard en externe / pas besoin en interne = non car fileprovider??
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
-    <application
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    -->
 
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".splash_screen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+       <application
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
+           android:allowBackup="true"
+           android:icon="@mipmap/ic_launcher"
+           android:label="@string/app_name"
+           android:roundIcon="@mipmap/ic_launcher_round"
+           android:supportsRtl="true"
+           android:theme="@style/AppTheme">
+           <activity android:name=".splash_screen">
+               <intent-filter>
+                   <action android:name="android.intent.action.MAIN" />
+
+                   <category android:name="android.intent.category.LAUNCHER" />
+               </intent-filter>
+           </activity>
+           <activity
+               android:name=".MainActivity"
+               android:label="@string/app_name"
+               android:theme="@style/AppTheme.NoActionBar"></activity>
+           <!--
+                The API key for Google Maps-based APIs is defined as a string resource.
+                (See the file "res/values/google_maps_api.xml").
+                Note that the API key is linked to the encryption key used to sign the APK.
+                You need a different API key for each encryption key, including the release key that is used to
+                sign the APK for publishing.
+                You can define the keys for the debug and release targets in src/debug/ and src/release/.
+           -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDgYsLw1A5mdtlgprrsALZ8xP3ZpxVaAOM" />
+
+           <provider
+               android:name="android.support.v4.content.FileProvider"
+               android:authorities="fr.bicyclopresto.bicyclopresto_bike_fix.fileprovider"
+               android:exported="false"
+               android:grantUriPermissions="true">
+               <meta-data
+                   android:name="android.support.FILE_PROVIDER_PATHS"
+                   android:resource="@xml/file_paths" />
+           </provider>
 
     </application>
 
